--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Paradise"></activity>
+        <activity android:name=".Focused"></activity>
+        <activity android:name=".FreeYourMind" />
+        <activity android:name=".FindYourself" />
+        <activity android:name=".Happiness" />
+        <activity android:name=".Calm" />
+        <activity android:name=".Ocean" />
+        <activity android:name=".Sea" />
+        <activity android:name=".Forest" />
+        <activity android:name=".Morning" />
+        <activity android:name=".Paradise" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
