--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Focused"></activity>
+        <activity android:name=".Configuration"></activity>
+        <activity android:name=".Focused" />
         <activity android:name=".FreeYourMind" />
         <activity android:name=".FindYourself" />
         <activity android:name=".Happiness" />
